rosen responsive done

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <section class="banner-bottom-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-6">
+          <div class="col-lg-6 col-md-12 mb-md-2">
             <div class="banner-iteam-blocks-wrapper">
               <img src="./assets/images/banner-bottom/1.png" alt="" />
               <div class="content-wish">
@@ -226,7 +226,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 margin">
             <div class="banner-single-element">
               <div class="overlay-img">
                 <img src="./assets/images/banner-bottom/2.png" alt="" />
@@ -356,7 +356,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-12">
           <div class="owl-carousel featured-wrapper">
             <div class="iteam iteam-blog-01">
@@ -456,7 +456,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </section>
     <!-- FEATURED STORIES SECTION END -->
 
@@ -595,8 +595,21 @@
           <div class="col-lg-7">
             <div class="travel-blog-wrapper">
               <div class="iteam-blog-01">
-                <div class="travel-image">
-                  <img src="./assets/images/travels/big-1.png" alt="travel" />
+                <div class="iteam-image fancy-video">
+                  <img
+                    src="./assets/images/travels/big-1.png"
+                    alt="travel-image"
+                  />
+                  <div class="video-icon">
+                    <a
+                      data-fancybox=""
+                      data-width="640"
+                      data-height="360"
+                      class="video-btn"
+                      href="https://youtu.be/MPUBSZYESgU"
+                      ><i class="fas fa-play"></i
+                    ></a>
+                  </div>
                 </div>
                 <div class="iteam-blog-content travel-content">
                   <p class="sub-heading">
@@ -627,14 +640,16 @@
             <div class="travel-right-blog">
               <div class="iteam-image fancy-video">
                 <img src="./assets/images/travels/1.png" alt="travel-image" />
-                <a
-                  data-fancybox=""
-                  data-width="640"
-                  data-height="360"
-                  class="video-btn"
-                  href="https://youtu.be/MPUBSZYESgU"
-                  ><i class="fas fa-play"></i
-                ></a>
+                <div class="video-icon">
+                  <a
+                    data-fancybox=""
+                    data-width="640"
+                    data-height="360"
+                    class="video-btn"
+                    href="https://youtu.be/MPUBSZYESgU"
+                    ><i class="fas fa-play"></i
+                  ></a>
+                </div>
               </div>
               <div class="iteam-content align-self-center">
                 <span class="sub-heading">tourism</span>
@@ -653,8 +668,18 @@
               </div>
             </div>
             <div class="travel-right-blog">
-              <div class="iteam-image">
+              <div class="iteam-image fancy-video">
                 <img src="./assets/images/travels/2.png" alt="travel-image" />
+                <div class="video-icon">
+                  <a
+                    data-fancybox=""
+                    data-width="640"
+                    data-height="360"
+                    class="video-btn"
+                    href="https://youtu.be/MPUBSZYESgU"
+                    ><i class="fas fa-play"></i
+                  ></a>
+                </div>
               </div>
               <div class="iteam-content align-items-center">
                 <span class="sub-heading">fashion</span>
@@ -673,8 +698,18 @@
               </div>
             </div>
             <div class="travel-right-blog">
-              <div class="iteam-image">
+              <div class="iteam-image fancy-video">
                 <img src="./assets/images/travels/3.png" alt="travel-image" />
+                <div class="video-icon">
+                  <a
+                    data-fancybox=""
+                    data-width="640"
+                    data-height="360"
+                    class="video-btn"
+                    href="https://youtu.be/MPUBSZYESgU"
+                    ><i class="fas fa-play"></i
+                  ></a>
+                </div>
               </div>
               <div class="iteam-content align-self-center">
                 <span class="sub-heading">travel agency</span>
@@ -746,7 +781,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 margin">
             <div class="row">
               <div class="col-lg-6 col-md-6">
                 <div class="thamnail-block-right">
@@ -844,7 +879,7 @@
               </div>
               <form action="#" class="subcription-form">
                 <input
-                  class="p-3"
+                  class="p-3 mt-3"
                   type="email"
                   placeholder="Enter Your Email"
                   name="subcription-email"
